# grchive

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  README.dev.md  README.md  WORKSPACE
dependencies/: .gitignore  BUILD.bazel  bootstrap_bazel.sh  download_google_cloud_sdk.sh  download_istio.sh  download_kubectl.sh  download_libffi.sh  download_minikube.sh  download_python.sh  download_terraform.sh  download_vault.sh  requirements.txt
dependencies/python-helper/: Setup
dependencies/sap-nw-rfc/nwrfcsdk/: SIGNATURE.SMF
dependencies/sap-nw-rfc/nwrfcsdk/lib/: BUILD.bazel
dependencies/sap-nw-rfc/sap-gorfc/: BUILD.bazel
devops/docker/artifactory/: BUILD.bazel  artifactory.config.import.yml.tmpl  entrypoint.sh  system.yaml.tmpl
devops/docker/drone/: .gitignore  BUILD.bazel  Dockerfile.tmpl  build.sh  link_to_gitea.sh  run.sh  setup_drone.sh
devops/docker/drone_runner/: BUILD.bazel
devops/docker/drone_runner_worker_image/: BUILD.bazel  settings.xml.tmpl
devops/docker/gitea/: BUILD.bazel  docker_setup_extract_access.sh
devops/docker/integration_runner/: BUILD.bazel
devops/docker/kotlin_base/: BUILD.bazel
devops/docker/nfs/: BUILD.bazel  entrypoint.sh
devops/docker/nfs/etc/: BUILD.bazel  exports.tmpl
devops/docker/nginx/: BUILD.bazel  common-http-headers.conf  common-proxy.conf  nginx.dev.conf  nginx.prod.conf
devops/docker/preview_generator/: BUILD.bazel  Dockerfile
devops/docker/rabbitmq/: BUILD.bazel  rabbitmq-env.conf.tmpl  rabbitmq.prod.conf.tmpl  run_rabbitmq.sh.tmpl
devops/docker/reverse_proxy/: BUILD.bazel  minikube_env.sh  nginx.dev.conf.tmpl  nginx.prod.conf.tmpl
devops/docker/vault/: BUILD.bazel  run_vault.sh.tmpl
devops/gitea/: BUILD.bazel
devops/gitea/template/: .drone.yml.prod.tmpl  .drone.yml.tmpl  get_jar_from_mvn.sh  pom.xml.tmpl
devops/vault/: BUILD.bazel  init_dev_vault.sh  init_dev_vault.sh.tmpl
devops/vault/config/: .gitignore  BUILD.bazel  dev.hcl  dev.hcl.tmpl  dev.k8s.hcl.tmpl  prod.hcl.tmpl
devops/vault/policies/: BUILD.bazel  user-policy.hcl
src/database_fetcher/: BUILD.bazel  fetcher.go  mail.go  refresh.go
src/database_query_runner/: BUILD.bazel  query.go  runner.go
src/drone_runner_worker/: BUILD.bazel  compile.go  main.go  tracker.go
src/notification_hub/: BUILD.bazel  hub.go
src/preview_generator/: BUILD.bazel  frontend.go  frontend.py  generator.go  generator.py  mime_helper.py
src/proto/: BUILD.bazel  sqlQuery.proto
src/sap_tester/: BUILD.bazel  main.go
src/script_runner/: BUILD.bazel  docker.go  frontend.go  handlers.go  main.kt  tracker.go
src/script_runner/template/: pom.xml.tmpl  run.sh
src/script_runner/worker/: BUILD.bazel  pod.go  worker.go
src/script_runner/worker/docker/: docker.go  dockerFactory.go
src/script_runner/worker/k8s/: kubeFactory.go
src/script_runner_compiler/: BUILD.bazel  docker.go  frontend.go  handler.go  library.go  runtime.go
src/shell_runner/: BUILD.bazel  bash.go  frontend.go  handlers.go  powershell.go  run.go  tracker.go
src/webserver/: BUILD.bazel  config.go  dashboard.go  main.go  notifications.go  pages.go  rabbitmqInterface.go  templates.go  url.go
src/webserver/config/: BUILD.bazel  dev.toml  dev.toml.tmpl  prod.toml  prod.toml.tmpl
src/webserver/core/: BUILD.bazel  apiKey.go  clock.go  config.go  constants.go  controlDocumentation.go  controls.go  core.go  csrf.go  databases.go  deployments.go  docRequests.go  emailVerification.go  encryption.go  error.go  hashIds.go  infrastructure.go  inviteCodes.go  log.go  maps.go  messageHub.go  organization.go  parser.go  processFlowEdges.go  processFlowInputOutput.go  processFlowNodes.go  processFlows.go  random.go  risks.go  roles.go  search.go  session.go  structs.go  systems.go  time.go  timer.go  types.go  url.go  user.go  uuid.go  (+2 more)
src/webserver/database/: BUILD.bazel  apiKey.go  comments.go  controlDocumentation.go  controls.go  database.go  deployments.go  docRequests.go  emailVerification.go  generalLedger.go  gettingStartedInterest.go  inviteCodes.go  organizations.go  processFlowEdges.go  processFlowIO.go  processFlowNodeDisplaySettings.go  processFlowNodes.go  processFlowRelationships.go  processFlows.go  risks.go  roles.go  samlIdp.go  servers.go  session.go  sysDatabase.go  systems.go  users.go  utility.go  vendorProducts.go  vendors.go
src/webserver/render/: BUILD.bazel  error.go  pages.go  params.go  templates.go
src/webserver/rest/: BUILD.bazel  apiv2.go  auditTrail.go  clientData.go  code.go  comments.go  controlDocCatLinks.go  controlDocVersions.go  controlDocumentation.go  controlFolderLinks.go  controlGLLinks.go  controlSystemLinks.go  controls.go  dataSource.go  databases.go  deployment.go  docRequestControlLinks.go  docRequestDocCatLinks.go  docRequestFolderLinks.go  docRequests.go  features.go  folderFileLinks.go  folders.go  generalLedger.go  gettingStarted.go  login.go  logs.go  metadata.go  nodeGLLinks.go  nodeSystemLinks.go  notifications.go  organization.go  processFlow.go  processFlowEdges.go  processFlowIO.go  processFlowNodes.go  requests.go  resource.go  rest.go  riskGLLinks.go  (+17 more)
src/webserver/rest/analytics/: pbcAnalytics.go
src/webserver/rest/integrations/: integrations.go  sapErp.go
src/webserver/rest/settings/: pbcNotificationSettings.go
src/webserver/security/: BUILD.bazel  vault_api.go
src/webserver/templates/: base.tmpl  contactUs.tmpl  gettingStarted.tmpl  goBack.tmpl  index.tmpl  learnMore.tmpl  login.tmpl  redirect.tmpl  register.tmpl
src/webserver/templates/dashboard/: dashboardAuditTrail.tmpl  dashboardBase.tmpl  dashboardBuildLog.tmpl  dashboardClientData.tmpl  dashboardClientScripts.tmpl  dashboardControls.tmpl  dashboardDatabases.tmpl  dashboardDocRequests.tmpl  (+42 more)
src/webserver/webcore/: BUILD.bazel  accessControl.go  apiAccess.go  auth.go  clientsession.go  constants.go  context.go  csrf.go  emailVerification.go  handlers.go  inviteCodes.go  jwt.go  passwords.go  request.go  router.go  session.go
src/webserver/websocket/: BUILD.bazel  notifications.go  processFlowNodeDisplaySettings.go  websocket.go
test/lib/: BUILD.bazel  Pg.kt
(+1303 files in other folders)
