package(default_visibility = ["//visibility:public"])

config_setting(
    name = "production",
    values = {"compilation_mode": "opt"},
)

config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
)

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.3",
    jvm_target = "11",
    language_version = "1.3",
)
