package(default_visibility = ["//visibility:public"])

config_setting(
    name = "production",
    values = {"compilation_mode": "opt"},
)

config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
)

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.3",
    jvm_target = "11",
    language_version = "1.3",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

SAP_NWRFC_FILES = [
    "//dependencies/sap-nw-rfc/nwrfcsdk/lib:libicudata.so.50",
    "//dependencies/sap-nw-rfc/nwrfcsdk/lib:libicudecnumber.so",
    "//dependencies/sap-nw-rfc/nwrfcsdk/lib:libicui18n.so.50",
    "//dependencies/sap-nw-rfc/nwrfcsdk/lib:libicuuc.so.50",
    "//dependencies/sap-nw-rfc/nwrfcsdk/lib:libsapnwrfc.so",
    "//dependencies/sap-nw-rfc/nwrfcsdk/lib:libsapucum.so",
]

container_image (
    name = "common_base",
    base = "@debian-slim//image",
    files = SAP_NWRFC_FILES,
    directory = "/usr/lib",
)

container_image (
    name = "preview_generator_base",
    base = "@preview-generator-base//image",
    files = SAP_NWRFC_FILES,
    directory = "/usr/lib",
)

container_image (
    name = "powershell_base",
    base = "@powershell7-ubuntu18.04//image"
    files = SAP_NWRFC_FILES,
    directory = "/usr/lib",
)
