package(default_visibility=["//visibility:public"])

genrule(
    name = "dev_init_vault",
    srcs = [
        "init_dev_vault.sh.tmpl"
    ],
    outs = [
        "init_dev_vault.sh"
    ],
    executable = True,
    cmd = ". $(location //build:bash_env) && VAULT_USER_POLICY=$(location //devops/vault/policies:user-policy.hcl) envsubst < $< > $@",
    tools = [
        "//build:bash_env",
        "//devops/vault/policies:user-policy.hcl",
    ]
)
