package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "runner",
    srcs = [
        "runner.go",
        "query.go",
    ],
    deps = [
        "//src/core/golang/core:webserver_core_library",
        "//src/core/golang/database:webserver_database_library",
        "//src/core/golang/webcore:webserver_webcore_library",
        "//src/generic_database_api/golang:library",
        "//src/generic_database_api/golang/utility:library",
        "//src/vault_api/golang:vault_golang_api",
        "//src/proto:go_proto_sql_query",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
    data = [
        "//src/webserver/config:config",
    ],
)

