package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "hub",
    srcs = ["hub.go"],
    data = [
        "//src/webserver/config:config",
        "//src/webserver:templates",
    ],
    deps = [
        "//src/core/golang/core:webserver_core_library",
        "//src/core/golang/database:webserver_database_library",
        "//src/core/golang/webcore:webserver_webcore_library",
        "//src/mail_api/golang:mail_golang_api",
    ],
)
