package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name ="generator",
    srcs = [
        "generator.go",
    ],
    deps = [
        "@com_github_h2non_filetype//:go_default_library",
        "//src/core/golang/core:webserver_core_library",
    ],
)

go_binary(
    name ="frontend",
    srcs = [
        "frontend.go",
    ],
    deps = [
        "//src/core/golang/core:webserver_core_library",
        "//src/core/golang/database:webserver_database_library",
        "//src/core/golang/webcore:webserver_webcore_library",
        "//src/backblaze_api/golang:backblaze_golang_api",
        "//src/vault_api/golang:vault_golang_api",
    ],
    data = [
        "//src/webserver:config_files",
        ":generator"
    ]
)
