package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")

py_binary(
    name = "mime_helper",
    srcs = [
        "mime_helper.py",
    ],
    main = "mime_helper.py",
    deps = [
        requirement("file-magic")
    ],
)

go_binary(
    name ="generator",
    srcs = [
        "generator.go",
    ],
    deps = [
        "//src/core/golang/core:webserver_core_library",
    ],
    data = [
        ":mime_helper",
    ],
)

go_binary(
    name ="frontend",
    srcs = [
        "frontend.go",
    ],
    deps = [
        "//src/core/golang/core:webserver_core_library",
        "//src/core/golang/database:webserver_database_library",
        "//src/core/golang/webcore:webserver_webcore_library",
        "//src/backblaze_api/golang:backblaze_golang_api",
        "//src/vault_api/golang:vault_golang_api",
    ],
    data = [
        "//src/webserver:config_files",
        ":generator",
    ]
)
