package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "frontend",
    srcs = glob([
        "*.go",
    ]),
    data = [
        "//src/webserver/config:config",
        "//devops/gcloud:gcloud-webserver-account.json",
    ],
    deps = [
        "//src/core/golang/core:webserver_core_library",
        "//src/core/golang/database:webserver_database_library",
        "//src/core/golang/webcore:webserver_webcore_library",
        "//src/gcloud_api/golang:gcloud_golang_api",
        "//src/vault_api/golang:vault_golang_api",
    ],
)

