package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

filegroup(
    name = "templates",
    srcs = glob([
        "templates/**/*.tmpl"
    ])
)

go_binary(
    name = "webserver",
    srcs = [
        "main.go",
        "dashboard.go",
        "notifications.go",
    ],
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
        "@org_golang_x_tools//godoc/vfs:go_default_library",
        "@org_golang_x_tools//godoc/vfs/zipfs:go_default_library",
        "//src/core/golang/core:webserver_core_library",
        "//src/mail_api/golang:mail_golang_api",
        "//src/okta_api/golang:okta_golang_api",
        "//src/vault_api/golang:vault_golang_api",
        "//src/core/golang/webcore:webserver_webcore_library",
        "//src/core/golang/database:webserver_database_library",
        "//src/webserver/render:webserver_render_library",
        "//src/webserver/rest:webserver_rest_library",
        "//src/webserver/websocket:webserver_websocket_library",
        "//src/gcloud_api/golang:gcloud_golang_api",
    ],
    data = [
        ":templates",
        "//src/core/jsui/assets:corejsui-assets",
        "//src/core/jsui:corejsui",
        "//src/core/jsui:corejsui-loader-templates",
        "//src/webserver/config:config",
        "//devops/gcloud:gcloud-webserver-account.json",
    ]
)
