package(default_visibility = ["//visibility:public"])
load("//build:variables.bzl", "env")
load("@io_bazel_rules_go//go:def.bzl", "go_library")


go_library(
    name = "gorfc",
    srcs = [
        "gorfc/gorfc.go",
    ],
    importpath="github.com/sap/gorfc/gorfc",
    cgo=True,
    copts=[
        "-I",
        env["SAP_NW_RFC_SDK"] + "/include",
        "-DNDEBUG",
        "-D_LARGEFILE_SOURCE",
        "-D_FILE_OFFSET_BITS=64",
        "-DSAPwithUNICODE",
        "-D__NO_MATH_INLINES",
        "-DSAPwithTHREADS",
        "-DSAPonUNIX",
        "-DSAPonLIN",
        "-O2",
        "-g",
        "-pthread",
        "-pipe",
        "-m64",
        "-fno-strict-aliasing",
        "-fno-omit-frame-pointer",
        "-fexceptions",
        "-funsigned-char",
        "-Wall",
        "-Wno-uninitialized",
        "-Wno-long-long",
        "-Wcast-align",
        "-Wno-unused-variable",
    ],
    clinkopts=[
        "-L",
        env["SAP_NW_RFC_SDK"] + "/lib",
        "-lsapnwrfc",
        "-lsapucum",
        "-O2",
        "-g",
        "-pthread",
    ],
)
