package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//build:variables.bzl", "env")

genrule(
    name="drone_dockerfile",
    srcs = ["Dockerfile.tmpl"],
    outs = ["Dockerfile"],
    cmd = ". $(location //build:bash_env) && envsubst < $< > $@",
    tools = [
        "//build:bash_env"
    ],
)

sh_binary(
    name="drone-build",
    srcs = [ "build.sh" ],
    data = [
        ":drone_dockerfile",
        "drone_workdir/bin/drone-agent",
        "drone_workdir/bin/drone-controller",
        "drone_workdir/bin/drone-server",
        "run.sh",
        "//scripts/vault:get_vault_secret_http.sh",
    ],
)

genrule(
    name="drone-cli",
    srcs = [ "@drone-cli//file" ],
    outs = [ "drone" ],
    cmd = "tar xvf $< -C $(RULEDIR)"
)

genrule(
    name = "link_to_gitea",
    srcs = [ "link_to_gitea.sh" ],
    outs = [ "script.sh" ],
    cmd = ". $(location //build:bash_env) && CLI=$(location :drone-cli) envsubst ' $${CLI} $${GITEA_HOST} $${GITEA_PORT} $${GITEA_PROTOCOL} $${GITEA_TOKEN} $${VAULT_HOST} $${VAULT_PORT} $${VAULT_TOKEN} $${DRONE_GITEA_CLIENT_SECRET_VAULT} $${DRONE_SERVER_PROTO} $${DRONE_SERVER_HOST} $${DRONE_SERVER_PORT} $${DRONE_TOKEN} $${GKE_REGISTRY_USER} $${GKE_REGISTRY_PASSWORD} $${GITEA_GLOBAL_ORG}' < $< > $@",
    executable = True,
    tools = [
        "//build:bash_env",
        ":drone-cli",
    ]
)

