package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//build:variables.bzl", "env")

container_image(
    name = "drone-runner",
    base = "@drone-runner-docker//image",
    env = {
        "DRONE_RPC_HOST": "{0}:{1}".format(env["DRONE_SERVER_HOST"], env["DRONE_SERVER_PORT"]),
        "DRONE_RPC_PROTO": env["DRONE_SERVER_PROTO"],
        "DRONE_RPC_SECRET": env["DRONE_RPC_SECRET"],
        "DRONE_UI_DISABLE": "true",
        "DRONE_RUNNER_CAPACITY": "2",
        "DRONE_RUNNER_NETWORKS": "c3p0",
    }
)
