package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//build:variables.bzl", "env")

container_image(
    name = "gitea",
    base = "@gitea//image",
    env = {
        "RUN_MODE": "prod",
        "DB_TYPE": "postgres",
        "DB_HOST": "{0}:{1}".format(env["POSTGRES_HOST"], env["POSTGRES_PORT"]),
        "DB_NAME": "gitea",
        "DB_USER": env["POSTGRES_USER"],
        "DB_PASSWD" : env["POSTGRES_PASSWORD"],
        "DISABLE_SSH" : "true",
        "SSH_PORT": "2999",
        "INSTALL_LOCK": "true",
        "SECRET_KEY": env["GITEA_SECRET_KEY"],
        "DISABLE_REGISTRATION" : "true",
    },
)

genrule(
    name = "docker_access_token",
    srcs = [ "docker_setup_extract_access.sh" ],
    outs = [ "script.sh" ],
    cmd = ". $(location //build:bash_env) && envsubst '$${GITEA_HOST} $${GITEA_PORT} $${GITEA_PROTOCOL} $${GITEA_TOKEN} $${VAULT_HOST} $${VAULT_PORT} $${VAULT_USER} $${VAULT_PASSWORD} $${VAULT_TOKEN} $${DRONE_GITEA_CLIENT_ID_VAULT} $${DRONE_GITEA_CLIENT_SECRET_VAULT} $${DRONE_SERVER_PROTO} $${DRONE_SERVER_HOST} $${DRONE_SERVER_PORT}' < $< > $@",
    executable = True,
    tools = [
        "//build:bash_env"
    ]
)
