package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//build:variables.bzl", "env")

container_image(
    name = "gitea",
    base = "@gitea//image",
    env = {
        "RUN_MODE": "prod",
        "DB_TYPE": "postgres",
        "DB_HOST": "{0}:{1}".format(env["POSTGRES_HOST"], env["POSTGRES_PORT"]),
        "DB_NAME": "gitea",
        "DB_USER": env["POSTGRES_USER"],
        "DB_PASSWD" : env["POSTGRES_PASSWORD"],
        "DISABLE_SSH" : "true",
        "SSH_PORT": "2999",
        "ROOT_URL": "{0}://{1}:{2}".format(env["GITEA_PROTOCOL"], env["GITEA_HOST"], env["GITEA_PORT"]),
        "HTTP_PORT": "{0}".format(env["GITEA_PORT"]),
        "SSH_DOMAIN": env["GITEA_HOST"],
        "INSTALL_LOCK": "true",
        "SECRET_KEY": env["GITEA_SECRET_KEY"],
        "DISABLE_REGISTRATION" : "true",
    },
)

genrule(
    name = "docker_access_token",
    srcs = [ "docker_setup_extract_access.sh" ],
    outs = [ "script.sh" ],
    cmd = ". $(location //build:bash_env) && envsubst '$${GITEA_HOST} $${GITEA_PORT} $${GITEA_PROTOCOL} $${GITEA_TOKEN} $${GITEA_GLOBAL_ORG} $${VAULT_HOST} $${VAULT_PORT} $${VAULT_TOKEN}' < $< > $@",
    executable = True,
    tools = [
        "//build:bash_env"
    ]
)
