package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

genrule(
    name = "config",
    srcs = select({
        "//:production": ["nginx.prod.conf"],
        "//conditions:default": ["nginx.dev.conf"],
    }),
    outs = [
        "etc/nginx/nginx.conf"
    ],
    cmd = "cp $< $@"
)

container_image(
    name = "nginx",
    base = "@nginx//image",
    files = [
        ":config",
        "common-http-headers.conf",
        "common-proxy.conf",
        "etc/nginx/dhparam.pem",
        "//src/core/jsui/assets:corejsui-assets",
    ],
    tars = [
        "//src/core/jsui:corejsui.tar",
    ],
    data_path = ".",
)
